// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Buttons/Button Array Disabled 1`] = `
<div
  className="buttonArray button-array disabled disabled"
>
  <button
    className="MuiButtonBase-root MuiButton-root MuiButton-text button-array-item buttonArrayItem standardButton standard-button Mui-disabled Mui-disabled"
    disabled={1}
    onBlur={[Function]}
    onClick={[Function]}
    onDragLeave={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex={-1}
    type="button"
  >
    <span
      className="MuiButton-label"
    >
      First button
    </span>
  </button>
  <button
    className="MuiButtonBase-root MuiButton-root MuiButton-text button-array-item buttonArrayItem standardButton standard-button Mui-disabled Mui-disabled"
    disabled={1}
    onBlur={[Function]}
    onClick={[Function]}
    onDragLeave={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex={-1}
    type="button"
  >
    <span
      className="MuiButton-label"
    >
      Second button
    </span>
  </button>
  <button
    className="MuiButtonBase-root MuiButton-root MuiButton-text button-array-item buttonArrayItem standardButton standard-button Mui-disabled Mui-disabled"
    disabled={1}
    onBlur={[Function]}
    onClick={[Function]}
    onDragLeave={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex={-1}
    type="button"
  >
    <span
      className="MuiButton-label"
    >
      Third button
    </span>
  </button>
  <button
    className="MuiButtonBase-root MuiButton-root MuiButton-text button-array-item buttonArrayItem standardButton standard-button Mui-disabled Mui-disabled"
    disabled={1}
    onBlur={[Function]}
    onClick={[Function]}
    onDragLeave={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex={-1}
    type="button"
  >
    <span
      className="MuiButton-label"
    >
      Fourth button
    </span>
  </button>
</div>
`;

exports[`Storyshots Buttons/Button Array Disabled Array 1`] = `
<div
  className="buttonArray button-array"
>
  <button
    className="MuiButtonBase-root MuiButton-root MuiButton-text button-array-item buttonArrayItem standardButton standard-button Mui-disabled Mui-disabled"
    disabled={1}
    onBlur={[Function]}
    onClick={[Function]}
    onDragLeave={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex={-1}
    type="button"
  >
    <span
      className="MuiButton-label"
    >
      First button
    </span>
  </button>
  <button
    className="MuiButtonBase-root MuiButton-root MuiButton-text button-array-item buttonArrayItem standardButton standard-button"
    disabled={0}
    onBlur={[Function]}
    onClick={[Function]}
    onDragLeave={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex={0}
    type="button"
  >
    <span
      className="MuiButton-label"
    >
      Second button
    </span>
  </button>
  <button
    className="MuiButtonBase-root MuiButton-root MuiButton-text button-array-item buttonArrayItem standardButton standard-button Mui-disabled Mui-disabled"
    disabled={1}
    onBlur={[Function]}
    onClick={[Function]}
    onDragLeave={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex={-1}
    type="button"
  >
    <span
      className="MuiButton-label"
    >
      Third button
    </span>
  </button>
  <button
    className="MuiButtonBase-root MuiButton-root MuiButton-text button-array-item buttonArrayItem standardButton standard-button"
    disabled={0}
    onBlur={[Function]}
    onClick={[Function]}
    onDragLeave={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex={0}
    type="button"
  >
    <span
      className="MuiButton-label"
    >
      Fourth button
    </span>
  </button>
</div>
`;

exports[`Storyshots Buttons/Button Array Disabled Function 1`] = `
<div
  className="buttonArray button-array"
>
  <button
    className="MuiButtonBase-root MuiButton-root MuiButton-text button-array-item buttonArrayItem standardButton standard-button"
    disabled={0}
    onBlur={[Function]}
    onClick={[Function]}
    onDragLeave={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex={0}
    type="button"
  >
    <span
      className="MuiButton-label"
    >
      First button
    </span>
  </button>
  <button
    className="MuiButtonBase-root MuiButton-root MuiButton-text button-array-item buttonArrayItem standardButton standard-button"
    disabled={0}
    onBlur={[Function]}
    onClick={[Function]}
    onDragLeave={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex={0}
    type="button"
  >
    <span
      className="MuiButton-label"
    >
      Second button
    </span>
  </button>
  <button
    className="MuiButtonBase-root MuiButton-root MuiButton-text button-array-item buttonArrayItem standardButton standard-button Mui-disabled Mui-disabled"
    disabled={1}
    onBlur={[Function]}
    onClick={[Function]}
    onDragLeave={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex={-1}
    type="button"
  >
    <span
      className="MuiButton-label"
    >
      Third button
    </span>
  </button>
  <button
    className="MuiButtonBase-root MuiButton-root MuiButton-text button-array-item buttonArrayItem standardButton standard-button"
    disabled={0}
    onBlur={[Function]}
    onClick={[Function]}
    onDragLeave={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex={0}
    type="button"
  >
    <span
      className="MuiButton-label"
    >
      Fourth button
    </span>
  </button>
</div>
`;

exports[`Storyshots Buttons/Button Array Disabled String 1`] = `
<div
  className="buttonArray button-array"
>
  <button
    className="MuiButtonBase-root MuiButton-root MuiButton-text button-array-item buttonArrayItem standardButton standard-button Mui-disabled Mui-disabled"
    disabled={1}
    onBlur={[Function]}
    onClick={[Function]}
    onDragLeave={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex={-1}
    type="button"
  >
    <span
      className="MuiButton-label"
    >
      First button
    </span>
  </button>
  <button
    className="MuiButtonBase-root MuiButton-root MuiButton-text button-array-item buttonArrayItem standardButton standard-button"
    disabled={0}
    onBlur={[Function]}
    onClick={[Function]}
    onDragLeave={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex={0}
    type="button"
  >
    <span
      className="MuiButton-label"
    >
      Second button
    </span>
  </button>
  <button
    className="MuiButtonBase-root MuiButton-root MuiButton-text button-array-item buttonArrayItem standardButton standard-button"
    disabled={0}
    onBlur={[Function]}
    onClick={[Function]}
    onDragLeave={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex={0}
    type="button"
  >
    <span
      className="MuiButton-label"
    >
      Third button
    </span>
  </button>
  <button
    className="MuiButtonBase-root MuiButton-root MuiButton-text button-array-item buttonArrayItem standardButton standard-button"
    disabled={0}
    onBlur={[Function]}
    onClick={[Function]}
    onDragLeave={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex={0}
    type="button"
  >
    <span
      className="MuiButton-label"
    >
      Fourth button
    </span>
  </button>
</div>
`;

exports[`Storyshots Buttons/Button Array Plain 1`] = `
<div
  className="buttonArray button-array"
>
  <button
    className="MuiButtonBase-root MuiButton-root MuiButton-text button-array-item buttonArrayItem standardButton standard-button"
    disabled={0}
    onBlur={[Function]}
    onClick={[Function]}
    onDragLeave={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex={0}
    type="button"
  >
    <span
      className="MuiButton-label"
    >
      First button
    </span>
  </button>
  <button
    className="MuiButtonBase-root MuiButton-root MuiButton-text button-array-item buttonArrayItem standardButton standard-button"
    disabled={0}
    onBlur={[Function]}
    onClick={[Function]}
    onDragLeave={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex={0}
    type="button"
  >
    <span
      className="MuiButton-label"
    >
      Second button
    </span>
  </button>
  <button
    className="MuiButtonBase-root MuiButton-root MuiButton-text button-array-item buttonArrayItem standardButton standard-button"
    disabled={0}
    onBlur={[Function]}
    onClick={[Function]}
    onDragLeave={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex={0}
    type="button"
  >
    <span
      className="MuiButton-label"
    >
      Third button
    </span>
  </button>
  <button
    className="MuiButtonBase-root MuiButton-root MuiButton-text button-array-item buttonArrayItem standardButton standard-button"
    disabled={0}
    onBlur={[Function]}
    onClick={[Function]}
    onDragLeave={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex={0}
    type="button"
  >
    <span
      className="MuiButton-label"
    >
      Fourth button
    </span>
  </button>
</div>
`;

exports[`Storyshots Buttons/Button Array Selected Array 1`] = `
<div
  className="buttonArray button-array"
>
  <button
    className="MuiButtonBase-root MuiButton-root MuiButton-text button-array-item buttonArrayItem selected selected standardButton standard-button"
    disabled={0}
    onBlur={[Function]}
    onClick={[Function]}
    onDragLeave={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex={0}
    type="button"
  >
    <span
      className="MuiButton-label"
    >
      First button
    </span>
  </button>
  <button
    className="MuiButtonBase-root MuiButton-root MuiButton-text button-array-item buttonArrayItem selected selected standardButton standard-button"
    disabled={0}
    onBlur={[Function]}
    onClick={[Function]}
    onDragLeave={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex={0}
    type="button"
  >
    <span
      className="MuiButton-label"
    >
      Second button
    </span>
  </button>
  <button
    className="MuiButtonBase-root MuiButton-root MuiButton-text button-array-item buttonArrayItem standardButton standard-button"
    disabled={0}
    onBlur={[Function]}
    onClick={[Function]}
    onDragLeave={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex={0}
    type="button"
  >
    <span
      className="MuiButton-label"
    >
      Third button
    </span>
  </button>
  <button
    className="MuiButtonBase-root MuiButton-root MuiButton-text button-array-item buttonArrayItem standardButton standard-button"
    disabled={0}
    onBlur={[Function]}
    onClick={[Function]}
    onDragLeave={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex={0}
    type="button"
  >
    <span
      className="MuiButton-label"
    >
      Fourth button
    </span>
  </button>
</div>
`;

exports[`Storyshots Buttons/Button Array Selected Function 1`] = `
<div
  className="buttonArray button-array"
>
  <button
    className="MuiButtonBase-root MuiButton-root MuiButton-text button-array-item buttonArrayItem standardButton standard-button"
    disabled={0}
    onBlur={[Function]}
    onClick={[Function]}
    onDragLeave={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex={0}
    type="button"
  >
    <span
      className="MuiButton-label"
    >
      First button
    </span>
  </button>
  <button
    className="MuiButtonBase-root MuiButton-root MuiButton-text button-array-item buttonArrayItem standardButton standard-button"
    disabled={0}
    onBlur={[Function]}
    onClick={[Function]}
    onDragLeave={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex={0}
    type="button"
  >
    <span
      className="MuiButton-label"
    >
      Second button
    </span>
  </button>
  <button
    className="MuiButtonBase-root MuiButton-root MuiButton-text button-array-item buttonArrayItem selected selected standardButton standard-button"
    disabled={0}
    onBlur={[Function]}
    onClick={[Function]}
    onDragLeave={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex={0}
    type="button"
  >
    <span
      className="MuiButton-label"
    >
      Third button
    </span>
  </button>
  <button
    className="MuiButtonBase-root MuiButton-root MuiButton-text button-array-item buttonArrayItem standardButton standard-button"
    disabled={0}
    onBlur={[Function]}
    onClick={[Function]}
    onDragLeave={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex={0}
    type="button"
  >
    <span
      className="MuiButton-label"
    >
      Fourth button
    </span>
  </button>
</div>
`;

exports[`Storyshots Buttons/Button Array Selected String 1`] = `
<div
  className="buttonArray button-array"
>
  <button
    className="MuiButtonBase-root MuiButton-root MuiButton-text button-array-item buttonArrayItem selected selected standardButton standard-button"
    disabled={0}
    onBlur={[Function]}
    onClick={[Function]}
    onDragLeave={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex={0}
    type="button"
  >
    <span
      className="MuiButton-label"
    >
      First button
    </span>
  </button>
  <button
    className="MuiButtonBase-root MuiButton-root MuiButton-text button-array-item buttonArrayItem standardButton standard-button"
    disabled={0}
    onBlur={[Function]}
    onClick={[Function]}
    onDragLeave={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex={0}
    type="button"
  >
    <span
      className="MuiButton-label"
    >
      Second button
    </span>
  </button>
  <button
    className="MuiButtonBase-root MuiButton-root MuiButton-text button-array-item buttonArrayItem standardButton standard-button"
    disabled={0}
    onBlur={[Function]}
    onClick={[Function]}
    onDragLeave={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex={0}
    type="button"
  >
    <span
      className="MuiButton-label"
    >
      Third button
    </span>
  </button>
  <button
    className="MuiButtonBase-root MuiButton-root MuiButton-text button-array-item buttonArrayItem standardButton standard-button"
    disabled={0}
    onBlur={[Function]}
    onClick={[Function]}
    onDragLeave={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex={0}
    type="button"
  >
    <span
      className="MuiButton-label"
    >
      Fourth button
    </span>
  </button>
</div>
`;

exports[`Storyshots Buttons/Button Contained 1`] = `
<button
  className="MuiButtonBase-root MuiButton-root MuiButton-contained standardButton standard-button"
  disabled={false}
  onBlur={[Function]}
  onDragLeave={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex={0}
  type="button"
>
  <span
    className="MuiButton-label"
  >
    Bottone
  </span>
</button>
`;

exports[`Storyshots Buttons/Button Contained Primary 1`] = `
<button
  className="MuiButtonBase-root MuiButton-root MuiButton-contained standardButton standard-button MuiButton-containedPrimary"
  disabled={false}
  onBlur={[Function]}
  onDragLeave={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex={0}
  type="button"
>
  <span
    className="MuiButton-label"
  >
    Bottone
  </span>
</button>
`;

exports[`Storyshots Buttons/Button Contained Secondary 1`] = `
<button
  className="MuiButtonBase-root MuiButton-root MuiButton-contained standardButton standard-button MuiButton-containedSecondary"
  disabled={false}
  onBlur={[Function]}
  onDragLeave={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex={0}
  type="button"
>
  <span
    className="MuiButton-label"
  >
    Bottone
  </span>
</button>
`;

exports[`Storyshots Buttons/Button Disabled 1`] = `
<button
  className="MuiButtonBase-root MuiButton-root MuiButton-text standardButton standard-button Mui-disabled Mui-disabled"
  disabled={true}
  onBlur={[Function]}
  onDragLeave={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex={-1}
  type="button"
>
  <span
    className="MuiButton-label"
  >
    Bottone
  </span>
</button>
`;

exports[`Storyshots Buttons/Button Disabled Contained Primary 1`] = `
<button
  className="MuiButtonBase-root MuiButton-root MuiButton-contained standardButton standard-button MuiButton-containedPrimary Mui-disabled Mui-disabled"
  disabled={true}
  onBlur={[Function]}
  onDragLeave={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex={-1}
  type="button"
>
  <span
    className="MuiButton-label"
  >
    Bottone
  </span>
</button>
`;

exports[`Storyshots Buttons/Button Disabled Contained Secondary 1`] = `
<button
  className="MuiButtonBase-root MuiButton-root MuiButton-contained standardButton standard-button MuiButton-containedSecondary Mui-disabled Mui-disabled"
  disabled={true}
  onBlur={[Function]}
  onDragLeave={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex={-1}
  type="button"
>
  <span
    className="MuiButton-label"
  >
    Bottone
  </span>
</button>
`;

exports[`Storyshots Buttons/Button Disabled Outlined 1`] = `
<button
  className="MuiButtonBase-root MuiButton-root MuiButton-outlined standardButton standard-button MuiButton-outlinedSecondary Mui-disabled Mui-disabled"
  disabled={true}
  onBlur={[Function]}
  onDragLeave={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex={-1}
  type="button"
>
  <span
    className="MuiButton-label"
  >
    Bottone
  </span>
</button>
`;

exports[`Storyshots Buttons/Button Disabled Outlined Secondary 1`] = `
<button
  className="MuiButtonBase-root MuiButton-root MuiButton-outlined standardButton standard-button MuiButton-outlinedSecondary Mui-disabled Mui-disabled"
  disabled={true}
  onBlur={[Function]}
  onDragLeave={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex={-1}
  type="button"
>
  <span
    className="MuiButton-label"
  >
    Bottone
  </span>
</button>
`;

exports[`Storyshots Buttons/Button Outlined 1`] = `
<button
  className="MuiButtonBase-root MuiButton-root MuiButton-outlined standardButton standard-button MuiButton-outlinedPrimary"
  disabled={false}
  onBlur={[Function]}
  onDragLeave={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex={0}
  type="button"
>
  <span
    className="MuiButton-label"
  >
    Bottone
  </span>
</button>
`;

exports[`Storyshots Buttons/Button Outlined Secondary 1`] = `
<button
  className="MuiButtonBase-root MuiButton-root MuiButton-outlined standardButton standard-button MuiButton-outlinedSecondary"
  disabled={false}
  onBlur={[Function]}
  onDragLeave={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex={0}
  type="button"
>
  <span
    className="MuiButton-label"
  >
    Bottone
  </span>
</button>
`;

exports[`Storyshots Buttons/Button Primary 1`] = `
<button
  className="MuiButtonBase-root MuiButton-root MuiButton-text standardButton standard-button MuiButton-textPrimary"
  disabled={false}
  onBlur={[Function]}
  onDragLeave={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex={0}
  type="button"
>
  <span
    className="MuiButton-label"
  >
    Bottone
  </span>
</button>
`;

exports[`Storyshots Buttons/Button Secondary 1`] = `
<button
  className="MuiButtonBase-root MuiButton-root MuiButton-text standardButton standard-button MuiButton-textSecondary"
  disabled={false}
  onBlur={[Function]}
  onDragLeave={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex={0}
  type="button"
>
  <span
    className="MuiButton-label"
  >
    Bottone
  </span>
</button>
`;

exports[`Storyshots Buttons/CircleButton Disabled 1`] = `
<button
  className="MuiButtonBase-root MuiButton-root MuiButton-text circle-button circleButton standardButton standard-button Mui-disabled Mui-disabled"
  disabled={true}
  onBlur={[Function]}
  onDragLeave={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex={-1}
  type="button"
>
  <span
    className="MuiButton-label"
  >
    A
  </span>
</button>
`;

exports[`Storyshots Buttons/CircleButton Plain 1`] = `
<button
  className="MuiButtonBase-root MuiButton-root MuiButton-text circle-button circleButton standardButton standard-button Mui-disabled Mui-disabled"
  disabled={true}
  onBlur={[Function]}
  onDragLeave={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex={-1}
  type="button"
>
  <span
    className="MuiButton-label"
  >
    A
  </span>
</button>
`;

exports[`Storyshots Buttons/CircleButton Template 1`] = `
<button
  className="MuiButtonBase-root MuiButton-root MuiButton-text circle-button circleButton standardButton standard-button"
  disabled={false}
  onBlur={[Function]}
  onDragLeave={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex={0}
  type="button"
>
  <span
    className="MuiButton-label"
  />
</button>
`;

exports[`Storyshots Cards/LoginCard Standard 1`] = `
<div
  className="login-card loginCard"
>
  <form
    action="#"
    className="loginForm"
    onReset={[Function]}
    onSubmit={[Function]}
  >
    <div
      className="loginFields"
    >
      <div
        className="text-field textField loginSingleField username-field"
      >
        <div
          className="MuiFormControl-root MuiTextField-root"
        >
          <label
            className="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-outlined"
            data-shrink={false}
            htmlFor="username"
            id="username-label"
          >
            Email
          </label>
          <div
            className="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-formControl"
            onClick={[Function]}
          >
            <input
              aria-invalid={false}
              autoFocus={false}
              className="MuiInputBase-input MuiOutlinedInput-input"
              disabled={false}
              id="username"
              name="username"
              onAnimationStart={[Function]}
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              required={false}
              type="text"
              value=""
            />
            <fieldset
              aria-hidden={true}
              className="PrivateNotchedOutline-root-1 MuiOutlinedInput-notchedOutline"
            >
              <legend
                className="PrivateNotchedOutline-legendLabelled-3"
              >
                <span>
                  Email
                </span>
              </legend>
            </fieldset>
          </div>
        </div>
      </div>
      <div
        className="text-field textField loginSingleField password-field"
      >
        <div
          className="MuiFormControl-root MuiTextField-root"
        >
          <label
            className="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-outlined"
            data-shrink={false}
            htmlFor="password"
            id="password-label"
          >
            Password
          </label>
          <div
            className="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-formControl"
            onClick={[Function]}
          >
            <input
              aria-invalid={false}
              autoFocus={false}
              className="MuiInputBase-input MuiOutlinedInput-input"
              disabled={false}
              id="password"
              name="password"
              onAnimationStart={[Function]}
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              required={false}
              type="password"
              value=""
            />
            <fieldset
              aria-hidden={true}
              className="PrivateNotchedOutline-root-1 MuiOutlinedInput-notchedOutline"
            >
              <legend
                className="PrivateNotchedOutline-legendLabelled-3"
              >
                <span>
                  Password
                </span>
              </legend>
            </fieldset>
          </div>
        </div>
      </div>
    </div>
    <div
      className="forgotPwd"
    >
      <span>
        <a>
          Password dimenticata?
        </a>
      </span>
    </div>
    <div
      className="btnContainer"
    >
      <button
        className="MuiButtonBase-root MuiButton-root MuiButton-text loginBtn standardButton standard-button"
        disabled={false}
        onBlur={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={0}
        type="submit"
      >
        <span
          className="MuiButton-label"
        >
          Login
        </span>
      </button>
    </div>
  </form>
  <div
    className="socialLogin"
  >
    <span>
      Oppure accedi con
    </span>
    <div
      className="socialLoginBtns"
    >
      <button
        className="MuiButtonBase-root MuiButton-root MuiButton-text roundButton standardButton standard-button"
        disabled={false}
        onBlur={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={0}
        type="button"
      >
        <span
          className="MuiButton-label"
        >
          <svg>
            icon-facebook.svg
          </svg>
        </span>
      </button>
      <button
        className="MuiButtonBase-root MuiButton-root MuiButton-text roundButton standardButton standard-button"
        disabled={false}
        onBlur={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={0}
        type="button"
      >
        <span
          className="MuiButton-label"
        >
          <svg>
            icon-google.svg
          </svg>
        </span>
      </button>
    </div>
    <p>
      Sei un nuovo utente?
       
      <a
        className="registerLink"
        href=""
      >
        Registrati
      </a>
    </p>
  </div>
</div>
`;

exports[`Storyshots Cards/SubscriptionCard Disabled 1`] = `
<div
  className="subscription-card subscriptionCard disabled disabled"
>
  <h2
    className="title title"
  >
    Sottoscrizione
  </h2>
  <div
    className="price price"
  >
    <span
      className="priceValue price-value"
    >
      €
       
      10
    </span>
    <span
      className="paymentFrequency payment-frequency"
    >
      
    </span>
  </div>
  <div
    className="titleFeatures title-features"
  >
    Caratteristiche
    :
  </div>
  <ul
    className="listFeatures list-features"
  >
    <li
      className="singleFeature single-feature"
    >
       
      <svg>
        feature-yes.svg
      </svg>
       
      <span
        className="feature-text featureText"
      >
        Feature 1
      </span>
    </li>
    <li
      className="singleFeature single-feature"
    >
       
      <svg>
        feature-yes.svg
      </svg>
       
      <span
        className="feature-text featureText"
      >
        Feature 2
      </span>
    </li>
    <li
      className="singleFeature single-feature"
    >
       
      <svg>
        feature-no.svg
      </svg>
       
      <span
        className="feature-text featureText"
      >
        Feature 3
      </span>
    </li>
  </ul>
</div>
`;

exports[`Storyshots Cards/SubscriptionCard Most Convenient 1`] = `
<div
  className="subscription-card subscriptionCard mostConvenient most-convenient "
>
  <span
    className="badge"
  >
    Più conveniente
  </span>
  <h2
    className="title title"
  >
    Sottoscrizione
  </h2>
  <div
    className="price price"
  >
    <span
      className="priceValue price-value"
    >
      €
       
      10
    </span>
    <span
      className="paymentFrequency payment-frequency"
    >
      /2 mesi
    </span>
  </div>
  <div
    className="titleFeatures title-features"
  >
    Caratteristiche
    :
  </div>
  <ul
    className="listFeatures list-features"
  >
    <li
      className="singleFeature single-feature"
    >
       
      <svg>
        feature-yes.svg
      </svg>
       
      <span
        className="feature-text featureText"
      >
        Feature 1
      </span>
    </li>
    <li
      className="singleFeature single-feature"
    >
       
      <svg>
        feature-yes.svg
      </svg>
       
      <span
        className="feature-text featureText"
      >
        Feature 2
      </span>
    </li>
    <li
      className="singleFeature single-feature"
    >
       
      <svg>
        feature-no.svg
      </svg>
       
      <span
        className="feature-text featureText"
      >
        Feature 3
      </span>
    </li>
  </ul>
</div>
`;

exports[`Storyshots Cards/SubscriptionCard No Features 1`] = `
<div
  className="subscription-card subscriptionCard"
>
  <h2
    className="title title"
  >
    Sottoscrizione
  </h2>
  <div
    className="price price"
  >
    <span
      className="priceValue price-value"
    >
      €
       
      10
    </span>
    <span
      className="paymentFrequency payment-frequency"
    >
      /2 mesi
    </span>
  </div>
</div>
`;

exports[`Storyshots Cards/SubscriptionCard Package 1`] = `
<div
  className="subscription-card subscriptionCard"
>
  <h2
    className="title title"
  >
    Sottoscrizione
  </h2>
  <div
    className="price price"
  >
    <span
      className="priceValue price-value"
    >
      €
       
      10
    </span>
    <span
      className="paymentFrequency payment-frequency"
    >
      
    </span>
  </div>
  <div
    className="titleFeatures title-features"
  >
    Caratteristiche
    :
  </div>
  <ul
    className="listFeatures list-features"
  >
    <li
      className="singleFeature single-feature"
    >
       
      <svg>
        feature-yes.svg
      </svg>
       
      <span
        className="feature-text featureText"
      >
        Feature 1
      </span>
    </li>
    <li
      className="singleFeature single-feature"
    >
       
      <svg>
        feature-yes.svg
      </svg>
       
      <span
        className="feature-text featureText"
      >
        Feature 2
      </span>
    </li>
    <li
      className="singleFeature single-feature"
    >
       
      <svg>
        feature-no.svg
      </svg>
       
      <span
        className="feature-text featureText"
      >
        Feature 3
      </span>
    </li>
  </ul>
</div>
`;

exports[`Storyshots Cards/SubscriptionCard Standard 1`] = `
<div
  className="subscription-card subscriptionCard"
>
  <h2
    className="title title"
  >
    Sottoscrizione
  </h2>
  <div
    className="price price"
  >
    <span
      className="priceValue price-value"
    >
      €
       
      10
    </span>
    <span
      className="paymentFrequency payment-frequency"
    >
      /mese
    </span>
  </div>
  <div
    className="titleFeatures title-features"
  >
    Caratteristiche
    :
  </div>
  <ul
    className="listFeatures list-features"
  >
    <li
      className="singleFeature single-feature"
    >
       
      <svg>
        feature-yes.svg
      </svg>
       
      <span
        className="feature-text featureText"
      >
        Feature 1
      </span>
    </li>
    <li
      className="singleFeature single-feature"
    >
       
      <svg>
        feature-yes.svg
      </svg>
       
      <span
        className="feature-text featureText"
      >
        Feature 2
      </span>
    </li>
    <li
      className="singleFeature single-feature"
    >
       
      <svg>
        feature-no.svg
      </svg>
       
      <span
        className="feature-text featureText"
      >
        Feature 3
      </span>
    </li>
  </ul>
</div>
`;

exports[`Storyshots Cards/SubscriptionCard Standard Two Months 1`] = `
<div
  className="subscription-card subscriptionCard"
>
  <h2
    className="title title"
  >
    Sottoscrizione
  </h2>
  <div
    className="price price"
  >
    <span
      className="priceValue price-value"
    >
      €
       
      10
    </span>
    <span
      className="paymentFrequency payment-frequency"
    >
      /2 mesi
    </span>
  </div>
  <div
    className="titleFeatures title-features"
  >
    Caratteristiche
    :
  </div>
  <ul
    className="listFeatures list-features"
  >
    <li
      className="singleFeature single-feature"
    >
       
      <svg>
        feature-yes.svg
      </svg>
       
      <span
        className="feature-text featureText"
      >
        Feature 1
      </span>
    </li>
    <li
      className="singleFeature single-feature"
    >
       
      <svg>
        feature-yes.svg
      </svg>
       
      <span
        className="feature-text featureText"
      >
        Feature 2
      </span>
    </li>
    <li
      className="singleFeature single-feature"
    >
       
      <svg>
        feature-no.svg
      </svg>
       
      <span
        className="feature-text featureText"
      >
        Feature 3
      </span>
    </li>
  </ul>
</div>
`;

exports[`Storyshots Cards/SubscriptionCard With Description 1`] = `
<div
  className="subscription-card subscriptionCard"
>
  <h2
    className="title title"
  >
    Sottoscrizione
  </h2>
  <div
    className="description description"
  >
    Descrizione Descrizione Descrizione Descrizione Descrizione
  </div>
  <div
    className="price price"
  >
    <span
      className="priceValue price-value"
    >
      €
       
      10
    </span>
    <span
      className="paymentFrequency payment-frequency"
    >
      /2 mesi
    </span>
  </div>
</div>
`;

exports[`Storyshots Input/ColorPicker Disabled 1`] = `
<div
  style={
    Object {
      "marginTop": "28px",
      "position": "relative",
      "zIndex": 9999,
    }
  }
>
  <div
    style={
      Object {
        "position": "absolute",
      }
    }
  >
    <div
      className="picker picker pickerElementFirst"
      onClick={[Function]}
      style={
        Object {
          "backgroundColor": "#E4E4E4",
        }
      }
    />
    <div
      className="hide"
    >
      <div
        className="picker picker__container"
      >
        <div
          className="picker__container__element"
          onClick={[Function]}
          style={
            Object {
              "backgroundColor": "#A0D7E7",
            }
          }
        />
      </div>
    </div>
    <div
      className="hide"
    >
      <div
        className="picker picker__container"
      >
        <div
          className="picker__container__element"
          onClick={[Function]}
          style={
            Object {
              "backgroundColor": "#A5CEA1",
            }
          }
        />
      </div>
    </div>
    <div
      className="hide"
    >
      <div
        className="picker picker__container"
      >
        <div
          className="picker__container__element"
          onClick={[Function]}
          style={
            Object {
              "backgroundColor": "#FFCE73",
            }
          }
        />
      </div>
    </div>
    <div
      className="hide"
    >
      <div
        className="picker picker__container"
      >
        <div
          className="picker__container__element"
          onClick={[Function]}
          style={
            Object {
              "backgroundColor": "#FF9A7B",
            }
          }
        />
      </div>
    </div>
    <div
      className="hide"
    >
      <div
        className="picker picker__container"
      >
        <div
          className="picker__container__element"
          onClick={[Function]}
          style={
            Object {
              "backgroundColor": "#FFA2C0",
            }
          }
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Input/ColorPicker Plain 1`] = `
<div>
  TBD
</div>
`;

exports[`Storyshots Input/ColorPicker With Error 1`] = `
<div
  style={
    Object {
      "marginTop": "28px",
      "position": "relative",
      "zIndex": 9999,
    }
  }
>
  <div
    style={
      Object {
        "position": "absolute",
      }
    }
  >
    <div
      className="picker picker pickerElementFirst"
      onClick={[Function]}
      style={
        Object {
          "backgroundColor": "#E4E4E4",
        }
      }
    />
    <div
      className="hide"
    >
      <div
        className="picker picker__container"
      >
        <div
          className="picker__container__element"
          onClick={[Function]}
          style={
            Object {
              "backgroundColor": "#A0D7E7",
            }
          }
        />
      </div>
    </div>
    <div
      className="hide"
    >
      <div
        className="picker picker__container"
      >
        <div
          className="picker__container__element"
          onClick={[Function]}
          style={
            Object {
              "backgroundColor": "#A5CEA1",
            }
          }
        />
      </div>
    </div>
    <div
      className="hide"
    >
      <div
        className="picker picker__container"
      >
        <div
          className="picker__container__element"
          onClick={[Function]}
          style={
            Object {
              "backgroundColor": "#FFCE73",
            }
          }
        />
      </div>
    </div>
    <div
      className="hide"
    >
      <div
        className="picker picker__container"
      >
        <div
          className="picker__container__element"
          onClick={[Function]}
          style={
            Object {
              "backgroundColor": "#FF9A7B",
            }
          }
        />
      </div>
    </div>
    <div
      className="hide"
    >
      <div
        className="picker picker__container"
      >
        <div
          className="picker__container__element"
          onClick={[Function]}
          style={
            Object {
              "backgroundColor": "#FFA2C0",
            }
          }
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Input/ColorPicker With Tooltip 1`] = `
<div
  style={
    Object {
      "marginTop": "28px",
      "position": "relative",
      "zIndex": 9999,
    }
  }
>
  <div
    style={
      Object {
        "position": "absolute",
      }
    }
  >
    <div
      className="picker picker pickerElementFirst"
      onClick={[Function]}
      style={
        Object {
          "backgroundColor": "#E4E4E4",
        }
      }
    />
    <div
      className="hide"
    >
      <div
        className="picker picker__container"
      >
        <div
          className="picker__container__element"
          onClick={[Function]}
          style={
            Object {
              "backgroundColor": "#A0D7E7",
            }
          }
        />
      </div>
    </div>
    <div
      className="hide"
    >
      <div
        className="picker picker__container"
      >
        <div
          className="picker__container__element"
          onClick={[Function]}
          style={
            Object {
              "backgroundColor": "#A5CEA1",
            }
          }
        />
      </div>
    </div>
    <div
      className="hide"
    >
      <div
        className="picker picker__container"
      >
        <div
          className="picker__container__element"
          onClick={[Function]}
          style={
            Object {
              "backgroundColor": "#FFCE73",
            }
          }
        />
      </div>
    </div>
    <div
      className="hide"
    >
      <div
        className="picker picker__container"
      >
        <div
          className="picker__container__element"
          onClick={[Function]}
          style={
            Object {
              "backgroundColor": "#FF9A7B",
            }
          }
        />
      </div>
    </div>
    <div
      className="hide"
    >
      <div
        className="picker picker__container"
      >
        <div
          className="picker__container__element"
          onClick={[Function]}
          style={
            Object {
              "backgroundColor": "#FFA2C0",
            }
          }
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Input/ColorPicker With Warning 1`] = `
<div
  style={
    Object {
      "marginTop": "28px",
      "position": "relative",
      "zIndex": 9999,
    }
  }
>
  <div
    style={
      Object {
        "position": "absolute",
      }
    }
  >
    <div
      className="picker picker pickerElementFirst"
      onClick={[Function]}
      style={
        Object {
          "backgroundColor": "#E4E4E4",
        }
      }
    />
    <div
      className="hide"
    >
      <div
        className="picker picker__container"
      >
        <div
          className="picker__container__element"
          onClick={[Function]}
          style={
            Object {
              "backgroundColor": "#A0D7E7",
            }
          }
        />
      </div>
    </div>
    <div
      className="hide"
    >
      <div
        className="picker picker__container"
      >
        <div
          className="picker__container__element"
          onClick={[Function]}
          style={
            Object {
              "backgroundColor": "#A5CEA1",
            }
          }
        />
      </div>
    </div>
    <div
      className="hide"
    >
      <div
        className="picker picker__container"
      >
        <div
          className="picker__container__element"
          onClick={[Function]}
          style={
            Object {
              "backgroundColor": "#FFCE73",
            }
          }
        />
      </div>
    </div>
    <div
      className="hide"
    >
      <div
        className="picker picker__container"
      >
        <div
          className="picker__container__element"
          onClick={[Function]}
          style={
            Object {
              "backgroundColor": "#FF9A7B",
            }
          }
        />
      </div>
    </div>
    <div
      className="hide"
    >
      <div
        className="picker picker__container"
      >
        <div
          className="picker__container__element"
          onClick={[Function]}
          style={
            Object {
              "backgroundColor": "#FFA2C0",
            }
          }
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Inputs/CheckBox Plain 1`] = `
<label
  className="MuiFormControlLabel-root checkbox"
>
  <span
    aria-disabled={false}
    className="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-5 MuiCheckbox-root MuiCheckbox-colorSecondary MuiIconButton-colorSecondary"
    onBlur={[Function]}
    onDragLeave={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex={null}
  >
    <span
      className="MuiIconButton-label"
    >
      <input
        checked={false}
        className="PrivateSwitchBase-input-8"
        data-indeterminate={false}
        onChange={[Function]}
        type="checkbox"
      />
      <svg
        aria-hidden={true}
        className="MuiSvgIcon-root"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
        />
      </svg>
    </span>
  </span>
  <span
    className="MuiTypography-root MuiFormControlLabel-label MuiTypography-body1"
  >
    This is the checkbox
  </span>
</label>
`;

exports[`Storyshots Inputs/CheckBox With Error And Warning 1`] = `
<label
  className="MuiFormControlLabel-root checkbox"
>
  <span
    aria-disabled={false}
    className="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-13 MuiCheckbox-root MuiCheckbox-colorSecondary MuiIconButton-colorSecondary"
    onBlur={[Function]}
    onDragLeave={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex={null}
  >
    <span
      className="MuiIconButton-label"
    >
      <input
        checked={false}
        className="PrivateSwitchBase-input-16"
        data-indeterminate={false}
        onChange={[Function]}
        type="checkbox"
      />
      <svg
        aria-hidden={true}
        className="MuiSvgIcon-root"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
        />
      </svg>
    </span>
  </span>
  <span
    className="MuiTypography-root MuiFormControlLabel-label MuiTypography-body1"
  />
</label>
`;

exports[`Storyshots Inputs/CheckBox With Tooltip 1`] = `
<label
  className="MuiFormControlLabel-root checkbox errorMessage warningMessage"
>
  <span
    aria-disabled={false}
    className="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-9 MuiCheckbox-root MuiCheckbox-colorSecondary MuiIconButton-colorSecondary"
    onBlur={[Function]}
    onDragLeave={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex={null}
  >
    <span
      className="MuiIconButton-label"
    >
      <input
        checked={false}
        className="PrivateSwitchBase-input-12"
        data-indeterminate={false}
        onChange={[Function]}
        type="checkbox"
      />
      <svg
        aria-hidden={true}
        className="MuiSvgIcon-root"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
        />
      </svg>
    </span>
  </span>
  <span
    className="MuiTypography-root MuiFormControlLabel-label MuiTypography-body1"
  >
    This is the checkbox
  </span>
</label>
`;

exports[`Storyshots Inputs/Select Plain 1`] = `
<div
  className="form-component select select"
>
  <label
    className="label"
  >
    Select a fruit
  </label>
  <div
    className="MuiInputBase-root MuiOutlinedInput-root"
    onClick={[Function]}
  >
    <div
      aria-haspopup="listbox"
      className="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiInputBase-input MuiOutlinedInput-input"
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      role="button"
      tabIndex={0}
    >
      <span
        dangerouslySetInnerHTML={
          Object {
            "__html": "&#8203;",
          }
        }
      />
    </div>
    <input
      aria-hidden={true}
      className="MuiSelect-nativeInput"
      onAnimationStart={[Function]}
      onChange={[Function]}
      tabIndex={-1}
      value=""
    />
    <svg
      aria-hidden={true}
      className="MuiSvgIcon-root MuiSelect-icon"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="M7 10l5 5 5-5z"
      />
    </svg>
    <fieldset
      aria-hidden={true}
      className="PrivateNotchedOutline-root-17 MuiOutlinedInput-notchedOutline"
      style={
        Object {
          "paddingLeft": 8,
        }
      }
    >
      <legend
        className="PrivateNotchedOutline-legend-18"
        style={
          Object {
            "width": 0.01,
          }
        }
      >
        <span
          dangerouslySetInnerHTML={
            Object {
              "__html": "&#8203;",
            }
          }
        />
      </legend>
    </fieldset>
  </div>
</div>
`;

exports[`Storyshots Inputs/TextInput Disabled 1`] = `
<div
  className="text-field textField"
>
  <div
    className="MuiFormControl-root MuiTextField-root"
  >
    <label
      className="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-outlined Mui-disabled Mui-disabled"
      data-shrink={false}
    >
      Text field label
    </label>
    <div
      className="MuiInputBase-root MuiOutlinedInput-root Mui-disabled Mui-disabled MuiInputBase-formControl"
      onClick={[Function]}
    >
      <input
        aria-invalid={false}
        autoFocus={false}
        className="MuiInputBase-input MuiOutlinedInput-input Mui-disabled Mui-disabled"
        disabled={true}
        onAnimationStart={[Function]}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        required={false}
        type="text"
        value=""
      />
      <fieldset
        aria-hidden={true}
        className="PrivateNotchedOutline-root-25 MuiOutlinedInput-notchedOutline"
      >
        <legend
          className="PrivateNotchedOutline-legendLabelled-27"
        >
          <span>
            Text field label
          </span>
        </legend>
      </fieldset>
    </div>
  </div>
</div>
`;

exports[`Storyshots Inputs/TextInput Number 1`] = `
<div
  className="text-field textField"
>
  <div
    className="MuiFormControl-root MuiTextField-root"
  >
    <label
      className="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-outlined"
      data-shrink={false}
    >
      Text field label
    </label>
    <div
      className="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-formControl"
      onClick={[Function]}
    >
      <input
        aria-invalid={false}
        autoFocus={false}
        className="MuiInputBase-input MuiOutlinedInput-input"
        disabled={false}
        max={50}
        min={-50}
        onAnimationStart={[Function]}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        required={false}
        type="number"
        value=""
      />
      <fieldset
        aria-hidden={true}
        className="PrivateNotchedOutline-root-45 MuiOutlinedInput-notchedOutline"
      >
        <legend
          className="PrivateNotchedOutline-legendLabelled-47"
        >
          <span>
            Text field label
          </span>
        </legend>
      </fieldset>
    </div>
  </div>
</div>
`;

exports[`Storyshots Inputs/TextInput Password 1`] = `
<div
  className="text-field textField"
>
  <div
    className="MuiFormControl-root MuiTextField-root"
  >
    <label
      className="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-outlined"
      data-shrink={false}
    >
      Text field label
    </label>
    <div
      className="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-formControl"
      onClick={[Function]}
    >
      <input
        aria-invalid={false}
        autoFocus={false}
        className="MuiInputBase-input MuiOutlinedInput-input"
        disabled={false}
        onAnimationStart={[Function]}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        required={false}
        type="password"
        value=""
      />
      <fieldset
        aria-hidden={true}
        className="PrivateNotchedOutline-root-41 MuiOutlinedInput-notchedOutline"
      >
        <legend
          className="PrivateNotchedOutline-legendLabelled-43"
        >
          <span>
            Text field label
          </span>
        </legend>
      </fieldset>
    </div>
  </div>
</div>
`;

exports[`Storyshots Inputs/TextInput Plain 1`] = `
<div
  className="text-field textField"
>
  <div
    className="MuiFormControl-root MuiTextField-root"
  >
    <label
      className="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-outlined"
      data-shrink={false}
    >
      Text field label
    </label>
    <div
      className="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-formControl"
      onClick={[Function]}
    >
      <input
        aria-invalid={false}
        autoFocus={false}
        className="MuiInputBase-input MuiOutlinedInput-input"
        disabled={false}
        onAnimationStart={[Function]}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        required={false}
        type="text"
        value=""
      />
      <fieldset
        aria-hidden={true}
        className="PrivateNotchedOutline-root-21 MuiOutlinedInput-notchedOutline"
      >
        <legend
          className="PrivateNotchedOutline-legendLabelled-23"
        >
          <span>
            Text field label
          </span>
        </legend>
      </fieldset>
    </div>
  </div>
</div>
`;

exports[`Storyshots Inputs/TextInput With Error 1`] = `
<div
  className="text-field textField"
>
  <div
    className="MuiFormControl-root MuiTextField-root"
    warningMessage="This is the error message"
  >
    <label
      className="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-outlined"
      data-shrink={false}
    >
      Text field label
    </label>
    <div
      className="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-formControl"
      onClick={[Function]}
    >
      <input
        aria-invalid={false}
        autoFocus={false}
        className="MuiInputBase-input MuiOutlinedInput-input"
        disabled={false}
        onAnimationStart={[Function]}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        required={false}
        type="text"
        value=""
      />
      <fieldset
        aria-hidden={true}
        className="PrivateNotchedOutline-root-33 MuiOutlinedInput-notchedOutline"
      >
        <legend
          className="PrivateNotchedOutline-legendLabelled-35"
        >
          <span>
            Text field label
          </span>
        </legend>
      </fieldset>
    </div>
  </div>
</div>
`;

exports[`Storyshots Inputs/TextInput With Tooltip 1`] = `
<div
  className="text-field textField"
>
  <div
    className="MuiFormControl-root MuiTextField-root"
    tooltip={
      Object {
        "title": "Tooltip",
        "type": "SUCCESS",
      }
    }
  >
    <label
      className="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-outlined"
      data-shrink={false}
    >
      Text field label
    </label>
    <div
      className="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-formControl"
      onClick={[Function]}
    >
      <input
        aria-invalid={false}
        autoFocus={false}
        className="MuiInputBase-input MuiOutlinedInput-input"
        disabled={false}
        onAnimationStart={[Function]}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        required={false}
        type="text"
        value=""
      />
      <fieldset
        aria-hidden={true}
        className="PrivateNotchedOutline-root-37 MuiOutlinedInput-notchedOutline"
      >
        <legend
          className="PrivateNotchedOutline-legendLabelled-39"
        >
          <span>
            Text field label
          </span>
        </legend>
      </fieldset>
    </div>
  </div>
</div>
`;

exports[`Storyshots Inputs/TextInput With Warning 1`] = `
<div
  className="text-field textField"
>
  <div
    className="MuiFormControl-root MuiTextField-root"
    warningMessage="This is the warning message"
  >
    <label
      className="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-outlined"
      data-shrink={false}
    >
      Text field label
    </label>
    <div
      className="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-formControl"
      onClick={[Function]}
    >
      <input
        aria-invalid={false}
        autoFocus={false}
        className="MuiInputBase-input MuiOutlinedInput-input"
        disabled={false}
        onAnimationStart={[Function]}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        required={false}
        type="text"
        value=""
      />
      <fieldset
        aria-hidden={true}
        className="PrivateNotchedOutline-root-29 MuiOutlinedInput-notchedOutline"
      >
        <legend
          className="PrivateNotchedOutline-legendLabelled-31"
        >
          <span>
            Text field label
          </span>
        </legend>
      </fieldset>
    </div>
  </div>
</div>
`;
